--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -10,7 +10,8 @@
   <div class="flex justify-center">
 
     <div class="container-md mx-auto w-1/3 flex flex-col border rounded-xl shadow-xl px-8 py-6 mt-4">
-      <img src="{{book.cover_image.url}}" class="w-3/4 rounded place-self-center" alt="">
+      {% comment %} <img src="{{book.cover_image.url}}" class="w-3/4 rounded place-self-center" alt=""> {% endcomment %}
+      <img src="https://picsum.photos/id/{{ book.pk }}/200/300" class="w-3/4 rounded place-self-center" alt="">
        {% if user.is_authenticated %}
         {% include "mixins/fav_button.html" with obj=book kind='book' %}
       {% endif %}
