--- a/templates/mixins/book.html
+++ b/templates/mixins/book.html
@@ -3,7 +3,8 @@
   <div class=" mb-6 px-2">
     <a href="{% url 'books:book' book.pk %}">
       <div class="flex flex-col"">
-        <div class="h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url({{book.cover_image.url}});"></div>
+        {% comment %} <div class="h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url({{book.cover_image.url}});"></div> {% endcomment %}
+        <div class="h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url(https://picsum.photos/id/{{ book.pk }}/200/300);"></div>
         <span class="text-lg font-bold	">{{book.title}}</span>
         <span class="text-sm mr-1">{{book.year}}</span>
         <span class="text-xs mr-1"> 평점 <i class="fas fa-star text-red-500 text-xs mr-1"></i>{{book.rating}}</span>
