--- a/templates/mixins/person.html
+++ b/templates/mixins/person.html
@@ -3,7 +3,8 @@
   <div class=" mb-6 px-2">
     <a href="{% url 'people:person' person.pk %}">
       <div class="flex flex-col"">
-        <div class="h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url({{person.photo.url}});"></div>
+        {% comment %} <div class="h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url({{person.photo.url}});"></div> {% endcomment %}
+        <div class="h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url(https://picsum.photos/id/{{ person.pk }}/200/300);"></div>
         <span class="text-lg font-bold">{{person.name}}</span>
         <span>{{person.kind}}</span>
       </div>
