--- a/templates/people/person_detail.html
+++ b/templates/people/person_detail.html
@@ -8,7 +8,8 @@
   <div class="flex justify-center">
 
     <div class="container-md mx-auto w-1/3 flex flex-col border rounded-xl shadow-xl px-8 py-6 mt-4">
-      <img src="{{person.photo.url}}" class="w-full rounded" alt="">
+      {% comment %} <img src="{{person.photo.url}}" class="w-full rounded" alt=""> {% endcomment %}
+      <img src="https://picsum.photos/id/{{ people.pk }}/200/300" class="w-full rounded" alt="">
       <span class="text-lg font-bold">{{person.name}}</span>
 
       <span>Kind : {{person.kind}}</span>
